exports[`BpkIcon should render correctly 1`] = `
<span
  className="bpk-icon-sm"
  dangerouslySetInnerHTML={
    Object {
      "__html": "FILE_MOCK_CONTENTS"
    }
  } />
`;

exports[`BpkIcon should render correctly with a "large" attribute 1`] = `
<span
  className="bpk-icon-lg"
  dangerouslySetInnerHTML={
    Object {
      "__html": "FILE_MOCK_CONTENTS"
    }
  } />
`;
